@@ -1,5 +1,8 @@
 2006-08-04  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* lily/spacing-loose-columns.cc (set_loose_columns): oops: use
+	space to next column for distance to fixed col.
+
 	* VERSION (PACKAGE_NAME): release 2.9.14
 
 	* lily/pitched-trill-engraver.cc (make_trill): do set_parent also
